TSyringe para injeção de dependencia - Refatorado specifications e categories
